--- a/Teacher/Teacher.csproj
+++ b/Teacher/Teacher.csproj
@@ -104,5 +104,17 @@
   <ItemGroup>
     <None Include="Resources\mmMinimum.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pictureВопросОтвет_16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pictureНастройки_16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pictureСтатистика_16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pictureФон_100.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
