--- a/Designer/Designer.csproj
+++ b/Designer/Designer.csproj
@@ -117,5 +117,8 @@
   <ItemGroup>
     <None Include="Resources\mmMinimum.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pictureИзображение_16.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
