--- a/Questionnaire/Questionnaire.csproj
+++ b/Questionnaire/Questionnaire.csproj
@@ -68,6 +68,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Controls\ViewAnswer.resx">
+      <DependentUpon>ViewAnswer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
