--- a/Designer/Designer.csproj
+++ b/Designer/Designer.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>iDesugner.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="ProgLib, Version=5.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -62,11 +65,11 @@
     <Compile Include="FormDescription.Designer.cs">
       <DependentUpon>FormDescription.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormDesigner.cs">
+    <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormDesigner.Designer.cs">
-      <DependentUpon>FormDesigner.cs</DependentUpon>
+    <Compile Include="FormMain.Designer.cs">
+      <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -76,8 +79,8 @@
     <EmbeddedResource Include="FormDescription.resx">
       <DependentUpon>FormDescription.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormDesigner.resx">
-      <DependentUpon>FormDesigner.cs</DependentUpon>
+    <EmbeddedResource Include="FormMain.resx">
+      <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -119,6 +122,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\pictureИзображение_16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="iDesugner.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
