--- a/Student/Student.csproj
+++ b/Student/Student.csproj
@@ -35,8 +35,7 @@
     <ApplicationIcon>iQuestionnaire.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ProgLib, Version=5.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="ProgLib">
       <HintPath>D:\System\User\Документы\Projects Visual Studio\ProgLib\ProgLib\bin\Debug\ProgLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
