--- a/Questionnaire/Questionnaire.csproj
+++ b/Questionnaire/Questionnaire.csproj
@@ -63,6 +63,7 @@
     <Compile Include="GlobalEvent.cs" />
     <Compile Include="GlobalEventArgs.cs" />
     <Compile Include="Hotkey.cs" />
+    <Compile Include="KeyHookDecl.cs" />
     <Compile Include="Network\TcpEventArgs.cs" />
     <Compile Include="Network\TcpServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
