--- a/Questionnaire/Questionnaire.csproj
+++ b/Questionnaire/Questionnaire.csproj
@@ -60,20 +60,13 @@
     <Compile Include="Data\Question.cs" />
     <Compile Include="Data\Result.cs" />
     <Compile Include="Data\Survey.cs" />
-    <Compile Include="GlobalEvent.cs" />
-    <Compile Include="GlobalEventArgs.cs" />
-    <Compile Include="Hotkey.cs" />
-    <Compile Include="KeyHookDecl.cs" />
-    <Compile Include="Network\TcpEventArgs.cs" />
-    <Compile Include="Network\TcpServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="VSCode\VSCodeManagement.cs" />
-    <Compile Include="VSCodeThemeEventArgs.cs" />
+    <Compile Include="VisualizationEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Controls\ViewAnswer.resx">
