--- a/Questionnaire/Questionnaire.csproj
+++ b/Questionnaire/Questionnaire.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.DirectoryServices.Protocols" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -59,7 +60,8 @@
       <DependentUpon>ViewAnswer.cs</DependentUpon>
     </Compile>
     <Compile Include="Data\Question.cs" />
-    <Compile Include="Data\Result.cs" />
+    <Compile Include="Data\QuestionResult.cs" />
+    <Compile Include="Data\Statistics.cs" />
     <Compile Include="Data\Survey.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
